--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 		    $('.command-step').on('click', function () {
 		        cpu.step();
 		        cpu.display();
+		        $('.instructions .values').scrollTop((cpu.position - 101) * 5);
 		        return false;
 		    });
 		});
