--- a/index.html
+++ b/index.html
@@ -155,6 +155,8 @@
     </div>
 </div>
 
+<p class="footer">Source on <a href="https://github.com/fabian/cpu">GitHub</a> · Icon by <a href="http://www.facecjf.com/">facecjf</a></p>
+
 <script type="text/javascript">
   var _gauges = _gauges || [];
   (function() {
