--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
     </div>
 </div>
 
-<p class="footer">Source on <a href="https://github.com/fabian/cpu">GitHub</a> · Icon by <a href="http://www.facecjf.com/">facecjf</a></p>
+<p class="footer"><a href="instructions.pdf">instructions.pdf</a> · Source on <a href="https://github.com/fabian/cpu">GitHub</a> · Icon by <a href="http://www.facecjf.com/">facecjf</a></p>
 
 <script type="text/javascript">
   var _gauges = _gauges || [];
